# Mandelbrot-graphics

./: README.md  mandelbrot-graphics.cabal
c/include/: mandelbrot-graphics.h
c/lib/: Makefile  m_d_colour.c  m_d_compute.c  m_d_render_scanline.c  m_d_transform.c  m_d_util.h  m_image.c  m_mipmap.c  m_pixel.c
c/lib/pkgconfig/: mandelbrot-graphics.pc.in
hs/lib/Mandelbrot/: Graphics.hs
hs/lib/Mandelbrot/Graphics/: Colour.hs  Compute.hs  Matrix.hs  QuadTree.hs  Render.hs  Text.hs  Transform.hs
hs/lib/Mandelbrot/Graphics/BoundingBox/: D1.hs  D2.hs
hs/lib/Mandelbrot/Graphics/STRef/: Lazy.hs
hs/lib/Mandelbrot/Graphics/Trustworthy/: Julia.hs  Mandelbrot.hs  Quadratic.hs
