name:                mandelbrot-graphics
version:             0.1.0.0
synopsis:            graphical algorithms related to the Mandelbrot set
description:         Graphical algorithms related to the Mandelbrot set:
                     image rendering, etc.
homepage:            https://code.mathr.co.uk/mandelbrot-graphics
license:             GPL-3
license-file:        COPYING
author:              Claude Heiland-Allen
maintainer:          claude@mathr.co.uk
copyright:           (c) 2018,2023 Claude Heiland-Allen
category:            Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md

library
  exposed-modules:
    Mandelbrot.Graphics,
    Mandelbrot.Graphics.Colour,
    Mandelbrot.Graphics.Compute,
    Mandelbrot.Graphics.Matrix,
    Mandelbrot.Graphics.Render,
    Mandelbrot.Graphics.Text,
    Mandelbrot.Graphics.Transform
    Mandelbrot.Graphics.QuadTree
    Mandelbrot.Graphics.BoundingBox.D1
    Mandelbrot.Graphics.BoundingBox.D2
    Mandelbrot.Graphics.STRef.Lazy
    Mandelbrot.Graphics.Trustworthy.Julia
    Mandelbrot.Graphics.Trustworthy.Mandelbrot
    Mandelbrot.Graphics.Trustworthy.Quadratic
  build-depends:
    base >=4.7 && <4.18,
    containers >=0.5 && <0.7,
    mandelbrot-numerics >=0.1 && <0.2,
    monad-loops >=0.4 && <0.5,
    mtl
  hs-source-dirs:      hs/lib
  default-language:    Haskell2010
  ghc-options:         -Wall

executable m-trustworthy-julia
  main-is: m-trustworthy-julia.hs
  build-depends:
    base,
    containers,
    mandelbrot-graphics
  hs-source-dirs: hs/bin
  default-language: Haskell2010
  ghc-options: -Wall -rtsopts

executable m-trustworthy-mandelbrot
  main-is: m-trustworthy-mandelbrot.hs
  build-depends:
    base,
    containers,
    mandelbrot-graphics
  hs-source-dirs: hs/bin
  default-language: Haskell2010
  ghc-options: -Wall -rtsopts

source-repository head
  type:     git
  location: https://code.mathr.co.uk/mandelbrot-graphics.git

source-repository this
  type:     git
  location: https://code.mathr.co.uk/mandelbrot-graphics.git
  tag:      v0.1.0.0
